feat: add legal documents (offer, privacy, consent) + fix FAQ

--- a/public/legal/privacy.html
+++ b/public/legal/privacy.html
@@ -1,17 +1,155 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Политика конфиденциальности</title>
-    <style>body{font-family:sans-serif;padding:2rem;line-height:1.6;max-width:800px;margin:0 auto;background:#050505;color:#e5e5e5;} h1{color:#fff;}</style>
+    <title>Политика конфиденциальности — Культура Маркетинга</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, sans-serif;
+            background: #020202;
+            color: #e5e5e5;
+            line-height: 1.8;
+            padding: 40px 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        h1 {
+            color: #00ff00;
+            margin-bottom: 30px;
+            font-size: 2rem;
+        }
+
+        h2 {
+            color: #fff;
+            margin: 30px 0 15px;
+            font-size: 1.3rem;
+            border-bottom: 1px solid #333;
+            padding-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 15px;
+            color: #a3a3a3;
+        }
+
+        ul {
+            margin: 15px 0 15px 30px;
+            color: #a3a3a3;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-bottom: 30px;
+            color: #00ff00;
+            text-decoration: none;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
+        .date {
+            color: #737373;
+            font-size: 0.9rem;
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Политика в отношении обработки персональных данных</h1>
-    <p>1. Общие положения</p>
-    <p>Настоящая политика обработки персональных данных составлена в соответствии с требованиями Федерального закона от 27.07.2006. № 152-ФЗ «О персональных данных» (далее — Закон о персональных данных) и определяет порядок обработки персональных данных и меры по обеспечению безопасности персональных данных, предпринимаемые Администрацией сайта (далее – Оператор).</p>
-    <p>1.1. Оператор ставит своей важнейшей целью и условием осуществления своей деятельности соблюдение прав и свобод человека и гражданина при обработке его персональных данных, в том числе защиты прав на неприкосновенность частной жизни, личную и семейную тайну.</p>
-    <p>1.2. Настоящая политика Оператора в отношении обработки персональных данных (далее – Политика) применяется ко всей информации, которую Оператор может получить о посетителях веб-сайта.</p>
-    <!-- Placeholder text for standard policy -->
+    <div class="container">
+        <a href="/" class="back-link">← На главную</a>
+
+        <h1>ПОЛИТИКА КОНФИДЕНЦИАЛЬНОСТИ</h1>
+        <p class="date">Дата публикации: 22 декабря 2024 г.</p>
+
+        <h2>1. ОБЩИЕ ПОЛОЖЕНИЯ</h2>
+        <p>1.1. Настоящая Политика конфиденциальности (далее — «Политика») разработана в соответствии с Федеральным
+            законом от 27.07.2006 № 152-ФЗ «О персональных данных» и определяет порядок обработки и защиты персональных
+            данных пользователей сайта cultscale.ru (далее — «Сайт»).</p>
+        <p>1.2. Оператором персональных данных является ИП Фамилия Имя Отчество (далее — «Оператор»).</p>
+
+        <h2>2. СОБИРАЕМЫЕ ДАННЫЕ</h2>
+        <p>2.1. Оператор может собирать следующие персональные данные:</p>
+        <ul>
+            <li>Имя и фамилия</li>
+            <li>Адрес электронной почты</li>
+            <li>Номер телефона</li>
+            <li>Идентификатор Telegram</li>
+            <li>Данные о проекте/бизнесе (добровольно предоставляемые)</li>
+        </ul>
+        <p>2.2. Также автоматически собираются технические данные: IP-адрес, тип браузера, время посещения.</p>
+
+        <h2>3. ЦЕЛИ ОБРАБОТКИ</h2>
+        <p>3.1. Персональные данные обрабатываются в следующих целях:</p>
+        <ul>
+            <li>Оказание информационно-консультационных услуг</li>
+            <li>Связь с пользователем для предоставления услуг</li>
+            <li>Отправка информационных сообщений (с согласия пользователя)</li>
+            <li>Улучшение качества услуг и сервиса</li>
+            <li>Выполнение требований законодательства РФ</li>
+        </ul>
+
+        <h2>4. ПРАВОВЫЕ ОСНОВАНИЯ</h2>
+        <p>4.1. Обработка персональных данных осуществляется на основании:</p>
+        <ul>
+            <li>Согласия субъекта персональных данных (ст. 6 ФЗ-152)</li>
+            <li>Исполнения договора (публичной оферты)</li>
+            <li>Законных интересов Оператора</li>
+        </ul>
+
+        <h2>5. ЗАЩИТА ДАННЫХ</h2>
+        <p>5.1. Оператор принимает необходимые организационные и технические меры для защиты персональных данных от
+            неправомерного доступа, уничтожения, изменения, блокирования, копирования и распространения.</p>
+        <p>5.2. Доступ к персональным данным имеют только уполномоченные сотрудники Оператора.</p>
+
+        <h2>6. ПЕРЕДАЧА ДАННЫХ ТРЕТЬИМ ЛИЦАМ</h2>
+        <p>6.1. Персональные данные могут передаваться третьим лицам только в следующих случаях:</p>
+        <ul>
+            <li>С согласия субъекта персональных данных</li>
+            <li>По требованию законодательства РФ</li>
+            <li>Для оказания услуг (партнерам, подрядчикам) при условии соблюдения конфиденциальности</li>
+        </ul>
+
+        <h2>7. ПРАВА ПОЛЬЗОВАТЕЛЯ</h2>
+        <p>7.1. Пользователь имеет право:</p>
+        <ul>
+            <li>Получить информацию об обработке своих персональных данных</li>
+            <li>Требовать уточнения, блокирования или уничтожения данных</li>
+            <li>Отозвать согласие на обработку персональных данных</li>
+            <li>Обжаловать действия Оператора в Роскомнадзор или суд</li>
+        </ul>
+
+        <h2>8. СРОКИ ХРАНЕНИЯ</h2>
+        <p>8.1. Персональные данные хранятся в течение срока, необходимого для достижения целей обработки, но не менее
+            сроков, установленных законодательством РФ.</p>
+        <p>8.2. При отзыве согласия данные уничтожаются в течение 30 дней.</p>
+
+        <h2>9. COOKIES И АНАЛИТИКА</h2>
+        <p>9.1. Сайт использует файлы cookies для улучшения работы сервиса.</p>
+        <p>9.2. Пользователь может отключить cookies в настройках браузера.</p>
+
+        <h2>10. КОНТАКТЫ</h2>
+        <p>По вопросам обработки персональных данных обращайтесь:<br>
+            Email: privacy@cultscale.ru<br>
+            Telegram: @kostya_fun</p>
+    </div>
 </body>
+
 </html>
