--- a/public/legal/offer.html
+++ b/public/legal/offer.html
@@ -1,15 +1,143 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Оферта</title>
-    <style>body{font-family:sans-serif;padding:2rem;line-height:1.6;max-width:800px;margin:0 auto;background:#050505;color:#e5e5e5;} h1{color:#fff;}</style>
+    <title>Публичная оферта — Культура Маркетинга</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, sans-serif;
+            background: #020202;
+            color: #e5e5e5;
+            line-height: 1.8;
+            padding: 40px 20px;
+        }
+
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        h1 {
+            color: #00ff00;
+            margin-bottom: 30px;
+            font-size: 2rem;
+        }
+
+        h2 {
+            color: #fff;
+            margin: 30px 0 15px;
+            font-size: 1.3rem;
+            border-bottom: 1px solid #333;
+            padding-bottom: 10px;
+        }
+
+        p {
+            margin-bottom: 15px;
+            color: #a3a3a3;
+        }
+
+        ul {
+            margin: 15px 0 15px 30px;
+            color: #a3a3a3;
+        }
+
+        li {
+            margin-bottom: 8px;
+        }
+
+        .back-link {
+            display: inline-block;
+            margin-bottom: 30px;
+            color: #00ff00;
+            text-decoration: none;
+        }
+
+        .back-link:hover {
+            text-decoration: underline;
+        }
+
+        .date {
+            color: #737373;
+            font-size: 0.9rem;
+            margin-bottom: 30px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Публичная оферта</h1>
-    <p>Настоящий документ является официальным предложением (публичной офертой) и содержит все существенные условия предоставления информационных услуг.</p>
-    <p>1. В соответствии с пунктом 2 статьи 437 Гражданского Кодекса Российской Федерации (ГК РФ) в случае принятия изложенных ниже условий и оплаты услуг, юридическое или физическое лицо, производящее акцепт этой оферты, становится Заказчиком.</p>
-    <!-- Placeholder text -->
+    <div class="container">
+        <a href="/" class="back-link">← На главную</a>
+
+        <h1>ПУБЛИЧНАЯ ОФЕРТА</h1>
+        <p class="date">Дата публикации: 22 декабря 2024 г.</p>
+
+        <h2>1. ОБЩИЕ ПОЛОЖЕНИЯ</h2>
+        <p>1.1. Настоящий документ является официальным предложением (публичной офертой) ИП Фамилия Имя Отчество (далее
+            — «Исполнитель») и содержит все существенные условия оказания информационно-консультационных услуг.</p>
+        <p>1.2. В соответствии с пунктом 2 статьи 437 Гражданского кодекса Российской Федерации, в случае принятия
+            изложенных ниже условий, лицо, производящее акцепт настоящей оферты, становится Заказчиком.</p>
+        <p>1.3. Акцептом оферты является нажатие кнопки «Войти в Челлендж» и/или переход в Telegram-бот по ссылке с
+            данного сайта.</p>
+
+        <h2>2. ПРЕДМЕТ ДОГОВОРА</h2>
+        <p>2.1. Исполнитель обязуется оказать Заказчику информационно-консультационные услуги в рамках программы
+            «7-дневный Челлендж по упаковке проекта» (далее — «Услуги»).</p>
+        <p>2.2. Услуги включают:</p>
+        <ul>
+            <li>Предоставление доступа к обучающим материалам через Telegram-бот</li>
+            <li>Информационную поддержку в рамках прохождения программы</li>
+            <li>Предоставление бонусных материалов (PDF-документы)</li>
+        </ul>
+
+        <h2>3. СТОИМОСТЬ И ПОРЯДОК ОПЛАТЫ</h2>
+        <p>3.1. Базовая программа «7-дневный Челлендж» предоставляется на безвозмездной основе.</p>
+        <p>3.2. Дополнительные платные услуги (услуга «под ключ») оплачиваются отдельно по согласованию сторон.</p>
+
+        <h2>4. ПРАВА И ОБЯЗАННОСТИ СТОРОН</h2>
+        <p>4.1. Исполнитель обязуется:</p>
+        <ul>
+            <li>Предоставить доступ к материалам программы</li>
+            <li>Обеспечить информационную поддержку</li>
+            <li>Соблюдать конфиденциальность персональных данных Заказчика</li>
+        </ul>
+        <p>4.2. Заказчик обязуется:</p>
+        <ul>
+            <li>Предоставить достоверную информацию о себе</li>
+            <li>Соблюдать правила использования материалов программы</li>
+            <li>Не передавать доступ к материалам третьим лицам</li>
+        </ul>
+
+        <h2>5. ОТВЕТСТВЕННОСТЬ СТОРОН</h2>
+        <p>5.1. Исполнитель не несет ответственности за результаты применения Заказчиком полученных знаний и
+            рекомендаций.</p>
+        <p>5.2. Стороны освобождаются от ответственности за неисполнение обязательств в случае форс-мажорных
+            обстоятельств.</p>
+
+        <h2>6. ИНТЕЛЛЕКТУАЛЬНАЯ СОБСТВЕННОСТЬ</h2>
+        <p>6.1. Все материалы программы являются интеллектуальной собственностью Исполнителя и защищены
+            законодательством РФ об авторском праве.</p>
+        <p>6.2. Заказчик не вправе копировать, распространять или использовать материалы в коммерческих целях без
+            письменного согласия Исполнителя.</p>
+
+        <h2>7. РАЗРЕШЕНИЕ СПОРОВ</h2>
+        <p>7.1. Все споры разрешаются путем переговоров.</p>
+        <p>7.2. При недостижении согласия споры подлежат рассмотрению в суде по месту нахождения Исполнителя в
+            соответствии с законодательством РФ.</p>
+
+        <h2>8. РЕКВИЗИТЫ ИСПОЛНИТЕЛЯ</h2>
+        <p>ИП Фамилия Имя Отчество<br>
+            ИНН: XXXXXXXXXXXX<br>
+            ОГРНИП: XXXXXXXXXXXXXXX<br>
+            Email: support@cultscale.ru</p>
+    </div>
 </body>
+
 </html>
