fix: marquee animation, reduce value block, remove legal requisites

--- a/public/legal/consent.html
+++ b/public/legal/consent.html
@@ -92,11 +92,10 @@
         </div>
 
         <h2>1. ОПЕРАТОР ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
-        <p>ИП Фамилия Имя Отчество<br>
-            ИНН: XXXXXXXXXXXX<br>
-            ОГРНИП: XXXXXXXXXXXXXXX<br>
-            Адрес: г. Москва, ул. Примерная, д. 1<br>
-            Email: privacy@cultscale.ru</p>
+        <p>Администрация сайта cultscale.ru<br>
+            Email: privacy@cultscale.ru<br>
+            Telegram: @kostya_fun</p>
+
 
         <h2>2. ПЕРЕЧЕНЬ ПЕРСОНАЛЬНЫХ ДАННЫХ</h2>
         <p>Настоящим я даю согласие на обработку следующих персональных данных:</p>
