--- a/public/legal/offer.html
+++ b/public/legal/offer.html
@@ -132,11 +132,11 @@
         <p>7.2. При недостижении согласия споры подлежат рассмотрению в суде по месту нахождения Исполнителя в
             соответствии с законодательством РФ.</p>
 
-        <h2>8. РЕКВИЗИТЫ ИСПОЛНИТЕЛЯ</h2>
-        <p>ИП Фамилия Имя Отчество<br>
-            ИНН: XXXXXXXXXXXX<br>
-            ОГРНИП: XXXXXXXXXXXXXXX<br>
-            Email: support@cultscale.ru</p>
+        <h2>8. КОНТАКТЫ</h2>
+        <p>По всем вопросам обращайтесь:<br>
+            Email: support@cultscale.ru<br>
+            Telegram: @kostya_fun</p>
+
     </div>
 </body>
 
