--- a/public/legal/privacy.html
+++ b/public/legal/privacy.html
@@ -83,7 +83,8 @@
         <p>1.1. Настоящая Политика конфиденциальности (далее — «Политика») разработана в соответствии с Федеральным
             законом от 27.07.2006 № 152-ФЗ «О персональных данных» и определяет порядок обработки и защиты персональных
             данных пользователей сайта cultscale.ru (далее — «Сайт»).</p>
-        <p>1.2. Оператором персональных данных является ИП Фамилия Имя Отчество (далее — «Оператор»).</p>
+        <p>1.2. Оператором персональных данных является Администрация сайта cultscale.ru (далее — «Оператор»).</p>
+
 
         <h2>2. СОБИРАЕМЫЕ ДАННЫЕ</h2>
         <p>2.1. Оператор может собирать следующие персональные данные:</p>
